[tool.poetry]
name = "honeycomb-beeline"
version = "3.2.0" # Update using bump2version
description = "Honeycomb library for easy instrumentation"
authors = ["Honeycomb.io <feedback@honeycomb.io>"]
license = "Apache-2.0"
packages = [
    { include = "beeline" }
]
readme = "README.md"
homepage = "https://github.com/honeycombio/beeline-python"
repository = "https://github.com/honeycombio/beeline-python"

[tool.poetry.dependencies]
python = ">=3.5, <4"
libhoney = ">=1.7.0"
wrapt = "^1.12.1"
[tool.poetry.dev-dependencies]
mock = {version = "3.0.5", python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*"}
coverage = [{version = "^5", python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4"}]
pylint = [{version = "^2", python = ">=3.5"}]
flask = "^1.1.2"
django = [{version = "2.*", python = ">= 3.5"}]
tornado = [{version = "^6.0.4", python = ">=3.5"}]
pycodestyle = "^2.6.0"
bump2version = {version="^1.0.0", python = ">=3.5"}

[tool.poetry.scripts]
tests = "beeline.test_suite:run_tests"
