[tool.poetry]
name = "honeycomb-beeline"
version = "3.6.0" # Update using bump2version
description = "Honeycomb library for easy instrumentation"
authors = ["Honeycomb.io <feedback@honeycomb.io>"]
license = "Apache-2.0"
packages = [
    { include = "beeline" }
]
readme = "README.md"
homepage = "https://github.com/honeycombio/beeline-python"
repository = "https://github.com/honeycombio/beeline-python"

[tool.poetry.dependencies]
python = ">=3.7, <4"
libhoney = "^2.4.0"
wrapt = "^1.12.1"
[tool.poetry.dev-dependencies]
mock = "^5.0.2"
coverage = "^7.2.7"
pylint = [{version = "^2.13", python = ">=3.7,<4"}]
django = [{version = "^3.2", python = ">= 3.7,<4"}]
tornado = "^6.2"
pycodestyle = "^2.10.0"
bump2version = "^1.0.1"
Flask = "2.2.5"

[tool.poetry.scripts]
tests = "beeline.test_suite:run_tests"
