[tool.poetry]
name = "beeline-flask-example"
version = "0.1.0"
description = "flask example app using beeline-python"
authors = ["honeycombio"]

[tool.poetry.dependencies]
python = "^3.8"
honeycomb-beeline = {path = "../..", develop = true}
python-dotenv = "^0.14.0"
MarkupSafe = "2.1"
Flask = "2.1"
