[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "print hello world"
authors = ["honeycombio"]

[tool.poetry.dependencies]
python = "^3.9"
honeycomb-beeline = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
